--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.0",
     "@types/rfc2047": "^2.0.3",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest": "^29.0.1",
