TEST: add a reaction
This should add the 'heart' reaction to
https://github.com/dscho/git/pull/29#issuecomment-791752382 (using my
fork for testing...).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/init/action.yml
+++ b/init/action.yml
@@ -8,6 +8,9 @@ inputs:
   git-git-access-token:
     description: 'The access token to work on git/git'
     required: true
+  dscho-git-access-token:
+    description: 'The access token to work on dscho/git'
+    required: true
 runs:
   using: 'node20'
   main: './index.js'
