Run `ncc` via `npm run build-dist`
This adds a convenience `script` entry to the `package.json` file that
allows bundling everything into `dist/`, dependency-free.

Since `ncc` generates a lot of `.d.ts` files (which are not required to
run the GitHub Action), we go ahead and tell Git to ignore these.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "build-dist": "ncc build -s -m ./lib/ci-helper.ts -o dist",
     "cleanbranch": "node ./build/script/delete-test-branches.js",
     "lint": "eslint \"{lib,script,tests,tests-config}/**/*.{ts,tsx,mjs,js}\"",
     "start": "node server.js",
