DEBUG: optionally avoid all actions
When debugging locally, say, a `/submit` command, it is incredibly not
okay if emails are sent or if comments are added to the respective PR on
GitHub. Setting the `GITGITGADGET_DEBUG` variable will now prevent all
such things from happening.

To avoid `git push` invocations accidentally succeeding because of, say,
VS Code's `GIT_ASKPASS` support, let's also unset the `VSCODE_*`
environment variables and override any credential helper when debugging
locally.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,8 @@
             "cwd": "${workspaceFolder}",
             "runtimeExecutable": null,
             "env": {
-                "NODE_ENV": "development"
+                "NODE_ENV": "development",
+                "GITGITGADGET_DEBUG": "1",
             },
             "console": "integratedTerminal",
             "sourceMaps": true,
