--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,8 @@
         "CIsmtphost",
         "CIsmtppass",
         "CIsmtpopts",
+        "GIT_ASKPASS",
+        "GIT_CONFIG_NOSYSTEM",
         "GITGIT_(|DIR|GIT_REMOTE|MAIL_REMOTE|MAIL_EPOCH)",
         "mailrepo",
         "parsePRURLInput",
