Add the `handle-pr-comment` GitHub Action
This is the culmination of all the preparation: The first GitHub Action
that will be used in a GitHub workflow that will replace these trusty
Azure Pipelines we used for so long:

  - GitGitGadget PR Handler:
    https://dev.azure.com/gitgitgadget/git/_build?definitionId=3

  - GitGitGadget PR Handler (git):
    https://dev.azure.com/gitgitgadget/git/_build?definitionId=13

  - GitGitGadget PR Handler (dscho):
    https://dev.azure.com/gitgitgadget/git/_build?definitionId=12

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "build-dist": "ncc build -s -m ./lib/ci-helper.ts -o dist",
     "cleanbranch": "node ./build/script/delete-test-branches.js",
-    "lint": "eslint \"{lib,script,tests,tests-config}/**/*.{ts,tsx,mjs,js}\" --ignore-pattern \"dist/**/*\"",
+    "lint": "eslint \"{lib,script,tests,tests-config}/**/*.{ts,tsx,mjs,js}\" \"*/index.js\" --ignore-pattern \"dist/**/*\"",
     "start": "node server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --env=node",
     "test:clean": "jest --clearCache && npm test",
