DEBUG: test the v1 branch thing on the `github-action` branch
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -2,7 +2,7 @@ name: Push GitHub Actions
 on:
   push:
     branches:
-      - main
+      - github-action
     paths:
       - '**/action.yml'
       - '**/*.js'
