fixup! Add a workflow to push the GitHub Actions

--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -9,6 +9,7 @@ on:
       - '**/*.ts'
       - 'package*.json'
       - 'res/**/*'
+      - '.github/workflows/push-github-actions.yml'
 
 permissions:
   contents: write
