DEBUG: log some messages in `push-github-actions`
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -43,6 +43,8 @@ jobs:
               v1=HEAD &&
               tag_name=v1.0
             else
+              set -x &&
+              git for-each-ref &&
               v1=FETCH_HEAD &&
               tag_name="$(git name-rev '--refs=refs/tags/v[0-9]*.[0-9]*' $v1)" &&
               case "$tag_name" in
