--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -44,7 +44,7 @@ jobs:
             else
               set -x &&
               v1=FETCH_HEAD &&
-              tag_name="$(git name-rev '--refs=v[0-9]*' $v1)" &&
+              tag_name="$(git name-rev '--refs=refs/tags/v[0-9]*.[1-9]*' $v1)" &&
               case "$tag_name" in
               '') tag_name=v1.0;;
               *) incr="${tag_name#* v1.}"; tag_name="v1.$((incr + 1))";;
