--- a/.github/workflows/push-github-actions.yml
+++ b/.github/workflows/push-github-actions.yml
@@ -43,7 +43,7 @@ jobs:
               tag_name=v1.0
             else
               set -x &&
-              for-each-ref &&
+              git for-each-ref &&
               v1=FETCH_HEAD &&
               tag_name="$(git name-rev '--refs=refs/tags/v[0-9]*.[1-9]*' $v1)" &&
               case "$tag_name" in
