TO-DROP: git revert -n 1 HEAD~4 # Revert "Merge branch 'test-action'"
This reverts commit 2544d7b9a50482c325c36a5a997a36fc7bf3a674, reversing
changes made to b36e4f0b400deac5897e758207e6c4b430e9b583.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,32 +5,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch GitHub Action",
-            "type": "node",
-            "request": "launch",
-            "runtimeArgs": [
-                "--inspect-brk",
-                // "--nolazy",
-            ],
-            "args": [
-                "${workspaceFolder}/handle-pr-comment/index.js"
-            ],
-            "stopOnEntry": false,
-            "cwd": "${workspaceFolder}",
-            "runtimeExecutable": null,
-            "env": {
-                "NODE_ENV": "development",
-                "GITGITGADGET_DRY_RUN": "1",
-            },
-            "console": "integratedTerminal",
-            "sourceMaps": true,
-            "outFiles": [
-                "${workspaceFolder}/build/**/*.js",
-                "${workspaceFolder}/dist/**/*.js",
-                "${workspaceFolder}/lib/**/*.js"
-            ]
-        },
-        {
             "name": "Tests",
             "type": "node",
             "request": "launch",
@@ -44,6 +18,7 @@
             ],
             "stopOnEntry": false,
             "cwd": "${workspaceFolder}",
+            "preLaunchTask": null,
             "runtimeExecutable": null,
             "env": {
                 "NODE_ENV": "development"
