fixup! DEBUG: optionally avoid all actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,6 +97,7 @@
         "CIsmtppass",
         "CIsmtpopts",
         "GIT_ASKPASS",
+        "GIT_CONFIG_NOSYSTEM",
         "users\\.noreply\\.github\\.com",
     ],
     "cSpell.language": "en-US",
