fixup! CIHelper: optionally clone the Git mailing list mirror

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
         "CIsmtpopts",
         "GIT_ASKPASS",
         "GIT_CONFIG_NOSYSTEM",
+        "mailrepo",
         "users\\.noreply\\.github\\.com",
     ],
     "cSpell.language": "en-US",
