--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,6 +99,7 @@
         "GIT_ASKPASS",
         "GIT_CONFIG_NOSYSTEM",
         "mailrepo",
+        "parsePRURLInput",
         "users\\.noreply\\.github\\.com",
     ],
     "cSpell.language": "en-US",
