--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
         "CIsmtpopts",
         "GIT_ASKPASS",
         "GIT_CONFIG_NOSYSTEM",
+        "GITGIT_(|DIR|GIT_REMOTE|MAIL_REMOTE|MAIL_EPOCH)",
         "mailrepo",
         "parsePRURLInput",
         "users\\.noreply\\.github\\.com",
