--- a/handle-new-mails/action.yml
+++ b/handle-new-mails/action.yml
@@ -3,13 +3,13 @@ description: 'Processes new mails on the Git mailing list'
 author: 'Johannes Schindelin'
 inputs:
   pr-repo-token:
-    description: 'The access token to work on gitgitgadget/git'
+    description: 'The access token to work on the repository that holds PRs and state'
     required: true
   upstream-repo-token:
-    description: 'The access token to work on git/git'
+    description: 'The access token to work on PRs in the upstream repository'
     required: true
   test-repo-token:
-    description: 'The access token to work on dscho/git'
+    description: 'The access token to work on PRs in the test repository'
     required: true
 runs:
   using: 'node20'
