--- a/handle-pr-comment/action.yml
+++ b/handle-pr-comment/action.yml
@@ -3,13 +3,13 @@ description: 'Handles slash commands such as /submit and /preview'
 author: 'Johannes Schindelin'
 inputs:
   pr-repo-token:
-    description: 'The access token to work on gitgitgadget/git'
+    description: 'The access token to work on the repository that holds PRs and state'
     required: true
   upstream-repo-token:
-    description: 'The access token to work on git/git'
+    description: 'The access token to work on PRs in the upstream repository'
     required: true
   test-repo-token:
-    description: 'The access token to work on dscho/git'
+    description: 'The access token to work on PRs in the test repository'
     required: true
   smtp-host:
     description: 'The SMTP host to use for sending emails'
