Actions: accept the `config` input
The idea is to configure GitGitGadget via a repository variable `CONFIG`
that contains the `IConfig` as JSON, and then pass it to all of
GitGitGadget's Actions via:

	```yml
	config: '${{ vars.CONFIG }}'
	```

For now, this input is optional, to ease the transition of GitGitGadget;
Eventually, this config will be required, so that several projects can
be served using identical source code in forks of `gitgitgadget`,
`gitgitgadget-github-app` and `gitgitgadget-workflows`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/handle-new-mails/action.yml
+++ b/handle-new-mails/action.yml
@@ -2,6 +2,9 @@ name: 'Handle new mails'
 description: 'Processes new mails on the Git mailing list'
 author: 'Johannes Schindelin'
 inputs:
+  config:
+    description: 'The GitGitGadget configuration to use (see https://github.com/gitgitgadget/gitgitgadget/blob/HEAD/lib/project-config.ts)'
+    required: false # not just yet...
   pr-repo-token:
     description: 'The access token to work on the repository that holds PRs and state'
     required: true
