--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "busybox",
         "coverageprocessor",
         "Cygwin",
+        "cygwingitgadget",
         "dstolee",
         "dugite",
         "eqeqeq",
