--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "8.41.0"
+    "typescript-eslint": "8.41.0",
+    "typia": "^9.7.2"
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
